hand z-index fix for PBs with attachments

--- a/client/Components/GameBoard/PlayerRow.scss
+++ b/client/Components/GameBoard/PlayerRow.scss
@@ -7,6 +7,10 @@
     display: flex;
 }
 
+.hand {
+    z-index: 0;
+}
+
 .keys {
     display: flex;
     flex-direction: column;
